# discursus

./: .gitignore  .python-version.save  Dockerfile  Dockerfile_app.REPLACE  Dockerfile_dagster  Dockerfile_dagster.REPLACE  Dockerfile_pipelines  Dockerfile_pipelines.REPLACE  LICENSE.md  Makefile  README.md  dagster_cloud.yaml  dagster_cloud_post_install.sh  dio_data_stack.env.REPLACE  docker-compose.yml  instructions.md  pull_request_template.md  pyproject.toml  requirements.txt  setup.py
.aws/: config.REPLACE
.github/workflows/: branch_deployments.yml  deploy.yml
discursus_core/: discursus_repo.py  jobs.py  pipelines.py  schedules.py  sensors.py  solids.py
discursus_core/configs/: aws_configs.yaml  gdelt_configs.yaml
discursus_core/dw/: .sqlfluff  .sqlfluffignore  .user.yml  README.md  dbt_project.yml  droughty_project.yaml  packages.yml  profiles.yml
discursus_core/environments/: airtable_env_variables.yaml  novacene_env_variables.yaml
discursus_core/miners/: README.md
discursus_core/ops/: dw_ops.py  enhance_mentions_op.py  gdelt_mining_ops.py  get_protest_relevancy.py  ml_enrichment_ops.py  ml_trainer_engine_ops.py
discursus_core/resources/: airtable_resource.py  novacene_ml_resource.py
discursus_core/semantics/: droughty_profiles.yml  droughty_projects.yml
discursus_core/solids/: dw_solids.py  enhance_mentions_solid.py  enhancement_solids.py
discursus_data_platform/: __init__.py  assets.py  discursus_repo.py  jobs.py  repository.py  schedules.py  sensors.py  workspace.yaml
discursus_data_platform/assets/: convert_novacene_jobs_to_resource_calls.py  dw_assets.py  enrich_gdelt_assets.py  hex_assets.py  source_gdelt_assets.py  twitter_assets.py
discursus_data_platform/configs/: novacene_configs.yaml  twitter_configs.yaml
discursus_data_platform/dp_apps/: dw_semantic_assets.py  public_dashboard_assets.py  social_media_assets.py
discursus_data_platform/dp_data_warehouse/: dbt_project.yml  packages.yml
discursus_data_platform/dp_gdelt/: gdelt_enriched_assets.py  gdelt_source_assets.py
discursus_data_platform/dp_movement_groupings/: airbyte_source_assets.py
discursus_data_platform/dp_sources/: gdelt_assets.py  gdelt_enriched_assets_deprecated.py  gdelt_ops.py  gdelt_source_assets_deprecated.py
discursus_data_platform/dw/: dbt_project.yml  packages.yml
discursus_data_platform/ops/: aws_ops.py  dbt_ops.py  gdelt_ops.py  ml_enrichment_ops.py  ml_trainer_engine_ops.py  novacene_ops.py  snowflake_ops.py  utils_ops.py  web_scraper_ops.py
discursus_data_platform/resources/: ml_enrichment_tracker.py  my_resources.py  novacene_ml_resource.py  twitter_resource.py
dpf_core/: dagster.yaml  dpf_repo.py  jobs.py  schedules.py  workspace.yaml
dpf_core/configs/: novacene_configs.yaml
dpf_core/dw/: dbt_project.yml  packages.yml
dpf_core/resources/: aws_resource.py  novacene_ml_resource.py
dw/: README.md  dbt_project.yml  profiles.yml
dw/analysis/: create_gdelt_events_source_table.sql  create_gdelt_mentions_source_table.sql  create_gdelt_source_table.sql
dw/data/: actor_types.csv  event_types.csv  fips_country.csv
dw/macros/: generate_schema_name.sql  profile_schema.sql  results_values.sql
dw/wh_docs/: dio.dbml  discursus.dbml
miners/: README.md  gdelt_miner.sh
miners/gdelt/: gdelt_events_miner.zsh  gdelt_mentions_miner.zsh  gdelt_miner.sh  gdelt_miner.zsh
orchestration/: README.md  dagit.out  dagster.yaml  dagster_daemon.out  dio_pipelines.py  discursus_pipelines.py  pull_request_template.md  workspace.yaml
orchestration/configs/: prod.yaml
orchestration/miners/: gdelt_miner.sh
orchestration/utils/: set_environment_variables.sh  set_environment_variables_fork.sh
resources/: style_guidelines.md
resources/snowflake_objects/: create_gdelt_article_named_entities_pipe.sql  create_gdelt_article_named_entities_source_table.sql  create_gdelt_article_summaries_pipe.sql  create_gdelt_article_summaries_source_table.sql  create_gdelt_articles_pipe.sql  create_gdelt_articles_source_table.sql  create_gdelt_enhanced_articles_pipe.sql  create_gdelt_enhanced_articles_source_table.sql  create_gdelt_gkg_articles_pipe.sql  create_gdelt_gkg_articles_source_table.sql  create_gdelt_mention_named_entities_pipe.sql  (+7 more)
saf_core/: dagster.yaml  jobs.py  saf_repo.py  schedules.py  workspace.yaml
semantics/: discursus.dbml  droughty_profiles.yml.REPLACE  droughty_projects.yml
utils/: set_environment_variables.sh
(+237 files in other folders)
