[tool.poetry]
name = "discursus-data-platform"
version = "0.1.0"
description = "The discursus.io project is an OSINT project to decode social movements in North America."
authors = ["Olivier Dupuis <odupuis@lantrns.co>"]
license = "MIT"
packages = [{include = "discursus_data_platform"}]

[tool.poetry.dependencies]
beautifulsoup4 = "^4.12.2"
boto3 = "^1.26.35"
dagit = "1.3.14"
dagster = "1.3.14"
dagster-aws = "0.19.14"
dagster-dbt = "0.19.14"
dagster-docker = "0.19.14"
dagster-graphql = "^1.3.14"
dagster-hex = "0.1.3"
dagster-pandas = "0.19.14"
dagster-postgres = "0.19.14"
dagster-shell = "0.19.14"
dagster-snowflake = "0.19.14"
db-dtypes = "^1.1.1"
dbt-core = "1.5.2"
dbt-snowflake = "1.5.2"
en_core_web_sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0.tar.gz" }
fsspec = "^2022.11.0"
future = "^0.18.2"
google-cloud-bigquery = "^3.10.0"
optparse-pretty = "^0.1.1"
pandas = "^1.5.2"
python = ">=3.8,<3.11"
saf-aws = {git = "https://github.com/discursus-data/saf_aws", rev = "release/0.2"}
saf-gdelt = {git = "https://github.com/discursus-data/saf_gdelt", rev = "release/0.2.1"}
saf-openai = {git = "https://github.com/discursus-data/saf_openai", rev = "release/0.1"}
spacy = "^3.5.2"
sqlalchemy = "1.4.46"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"